workspace/log/build_2023-12-10_21-20-29/template_drone_control/stderr.log
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::send_position_command(float, float, float, float)’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:346:13: error: ‘doueble’ was not declared in this scope; did you mean ‘double’?
  346 |             doueble velocityX = pCX(0) + pCX(1)*pow(t,2) + pCX(2)*pow(t,3) + pCX(3)*pow(t,4);
      |             ^~~~~~~
      |             double
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:347:20: error: expected ‘;’ before ‘velocityY’
  347 |             doueble velocityY = pCY(0) + pCY(1)*pow(t,2) + pCY(2)*pow(t,3) + pCY(3)*pow(t,4);
      |                    ^~~~~~~~~~
      |                    ;
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:348:20: error: expected ‘;’ before ‘velocityZ’
  348 |             doueble velocityZ = pCZ(0) + pCZ(1)*pow(t,2) + pCZ(2)*pow(t,3) + pCZ(3)*pow(t,4);
      |                    ^~~~~~~~~~
      |                    ;
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:349:35: error: ‘velocityX’ was not declared in this scope
  349 |             setpoint.velocity.x = velocityX;
      |                                   ^~~~~~~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:350:35: error: ‘velocityY’ was not declared in this scope
  350 |             setpoint.velocity.y = velocityY;
      |                                   ^~~~~~~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:351:35: error: ‘velocityZ’ was not declared in this scope
  351 |             setpoint.velocity.z = velocityZ;
      |                                   ^~~~~~~~~
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
